# Aether

./: .gitignore  CMakeLists.txt  README.md  run.bat
scripts/: run-0-setup.bat  run-1-build.bat  run-2-compile.bat  run-3-run.bat  run-4-rebuild.bat  run-quick.bat
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Entity/: ClickMarker.cpp  ClickMarker.hpp  Player.cpp  Player.hpp
src/Grid/: Grid.cpp  Grid.hpp
src/Input/: Raycast.cpp  Raycast.hpp
src/Renderer/: Cube.cpp  Cube.hpp  Ring.cpp  Ring.hpp  Shader.cpp  Shader.hpp
src/Scripts/: LuaEngine.cpp  LuaEngine.hpp
src/abilities/: fireball.lua
